--- a/composer.json
+++ b/composer.json
@@ -22,5 +22,5 @@
             "Codesleeve\\LaravelStapler\\": "src/"
         }
     },
-    "minimum-stability": "stable"
+    "minimum-stability": "dev"
 }
